--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,6 +15,15 @@ permissions:
   contents: read
 
 jobs:
+  job_01:
+    runs-on: ubuntu-latest
+  job_02:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: echo
+      run: echo "Hello World"
   build:
 
     runs-on: ubuntu-latest
